add gutter on photo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <section class="section island max-length">
     <div>
 
-      <figure class="photo">
+      <figure class="photo gutter-half">
         <img class="img-flex" src="images/venus.jpg" alt="">
         <figcaption class="text-center italic">A real-colour image of Venus.</figcaption>
       </figure>
