add padding to top

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <section class="section island max-length">
+  <section class="section pad-t-2 max-length">
     <div>
 
       <figure class="photo gutter-half">
