remove max-length and add milli class to fig caption

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
 
-  <section class="section pad-t-2 max-length">
+  <section class="section pad-t-2">
     <div>
 
       <figure class="photo gutter-half">
         <img class="img-flex" src="images/venus.jpg" alt="">
-        <figcaption class="text-center italic">A real-colour image of Venus.</figcaption>
+        <figcaption class="milli text-center italic">A real-colour image of Venus.</figcaption>
       </figure>
 
       <div class="info">
