--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
   <section class="section pad-t-2">
-    <div>
+    <div class="wrapper">
 
       <figure class="photo gutter-half">
         <img class="img-flex" src="images/venus.jpg" alt="">
@@ -18,7 +18,7 @@
       </figure>
 
       <div class="info">
-        <h1>Venus</h1>
+        <h1 class="push-0">Venus</h1>
         <p class="italic">Venus, the second planet in the Solar System.</p>
         <p>Venus orbits the Sun every 224.7 Earth days. Venus is a terrestrial planet and is sometimes called Earth’s “sister planet” because of their similar size, gravity, and bulk composition. However, it has also been shown to be radically different from Earth in other respects.</p>
 
